force-app/main/default/objects/Credit_Document__c/Credit_Document__c.object-meta.xml
<CustomObject>
    <label>Credit Document</label>
    <nameField>
        <displayFormat>DOC{000}</displayFormat>
        <label>Credit Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>