force-app/main/default/objects/Credit_Document__c/fields/Credit_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Amount__c</fullName>
    <label>Credit Limit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>