force-app/main/default/objects/Credit_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit App</fullName>
            </value>
            <value>
                <fullName>Credit Report</fullName>
            </value>
            <value>
                <fullName>Financial Statement</fullName>
            </value>
            <value>
                <fullName>Credit Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>