force-app/main/default/objects/Credit_Document__c/fields/References_Checked__c.field-meta.xml
<CustomField>
    <fullName>References_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>References Checked?</label>
    <type>Checkbox</type>
</CustomField>