force-app/main/default/objects/Credit_Document__c/fields/References_Satisfactory__c.field-meta.xml
<CustomField>
    <fullName>References_Satisfactory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>References Satisfactory?</label>
    <type>Checkbox</type>
</CustomField>