force-app/main/default/objects/Credit_Document__c/fields/Royalty_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Estimation__c</fullName>
    <label>Royalty Estimation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>