force-app/main/default/objects/Credit_Document__c/fields/Royalty_Situation__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Situation__c</fullName>
    <formula>IF(Credit_Limit_Amount__c&lt;Royalty_Estimation__c,&quot;Customer needs to pay a mandatory prepayment&quot;,&quot;No mandatory prepayment is needed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Royalty Situation</label>
    <type>Text</type>
</CustomField>