force-app/main/default/objects/Credit_Document__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed?</label>
    <type>Checkbox</type>
</CustomField>